# complaint-service-portal-api

./: .env.example  pyproject.toml  scope.md
alembic/: env.py
alembic/versions/: 29b008180a9c_initial_migration.py
data/cleaned/: complaints_by_category.csv  complaints_by_emotion.csv
data/raw/: complaints.csv
notebooks/: clean_data.ipynb  train_emotion_classifier.ipynb
src/: dependencies.py  main.py
src/api/: __init__.py  complaints.py
src/config/: settings.py
src/db/: __init__.py  base.py
src/db/events/: complaint_events.py
src/db/models/: __init__.py  complaint.py  response.py
src/schemas/: complaint.py  llm.py
src/services/: __init__.py  llm.py  llm_singleton.py
src/tasks/: inference.py
src/utils/: __init__.py  complaint_checksum.py
