[project]
name = "complaint-service-portal-api"
version = "0.1.0"
description = "LLM based backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.121.1",
    "langchain>=1.1.1",
    "langchain-community>=0.4.1",
    "llama-cpp-python>=0.3.16",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
